--- a/cdx_core/app/views/institutions/index.haml
+++ b/cdx_core/app/views/institutions/index.haml
@@ -3,14 +3,4 @@
     - if @can_create
       = link_to "+", new_institution_path, class: 'btn-add side-link ontop fix', title: I18n.t('institutions.index.btn_add')
 
-    = cdx_table title: I18n.t('institutions.index.institution') do |t|
-      - t.columns do
-        %col{:width => "100%"}
-      - t.thead do
-        %tr
-          %th
-            = I18n.t('institutions.index.name')
-      - t.tbody do
-        - @institutions.each do |institution|
-          %tr
-            %td= link_to institution.name, edit_institution_path(institution)
+    = render partial: 'list'
