--- a/cdx_vietnam/app/views/patients/_form.html.haml
+++ b/cdx_vietnam/app/views/patients/_form.html.haml
@@ -24,14 +24,7 @@
     .col
       = f.text_field :nickname, :class => 'input-large'
 
-  .row
-    .col.pe-2
-      %div.tooltip
-        = f.label :social_security_code
-        %div.tooltiptext_r
-          = I18n.t('patients.form.social_security_code_tooltip')
-    .col
-      = f.text_field :social_security_code, :class => 'input-large'
+  = react_component 'SocialSecurityCode', fieldValue: @patient.social_security_code
 
   .row
     .col.pe-2
