Change calling language list

--- a/cdx_core/app/views/shared/_header_nav.haml
+++ b/cdx_core/app/views/shared/_header_nav.haml
@@ -52,7 +52,7 @@
           %li= link_to I18n.t('layout.header_nav.api_tokens'), api_tokens_path
           %li
             %form
-              =select_tag "language", options_for_select([[I18n.t("views.en"),"en"],[I18n.t("views.vi"), "vi"]], current_user.locale), class: 'select_lang'
+              =select_tag "language", options_for_select(CdxLocalisation::Languages.active, current_user.locale), class: 'select_lang'
         %li= link_to I18n.t('layout.header_nav.log_out'), destroy_session_path(:user), method: :delete
     - else
       = link_to I18n.t('layout.header_nav.log_in'), new_session_path(:user)
