Generate test result lines.

--- a/cdx_core/app/views/encounters/show.html.haml
+++ b/cdx_core/app/views/encounters/show.html.haml
@@ -10,8 +10,7 @@
 = react_component('EncounterShow',
   encounter: @encounter_as_json,
   context: @navigation_context,
-  testBatch: TestBatches::Presenter.for_encounter(@encounter),
-  requestedTests: Presenters::RequestedTests.index_view(@encounter),
+  testBatch: TestBatches::Presenter.for_encounter(@encounter.test_batch),
   requested_by: @encounter.user !=nil ? @encounter.user.email : '',
   canUpdate: has_access?(@encounter, Policy::Actions::UPDATE_ENCOUNTER),
   showEdit: @show_edit_encounter,
