--- a/cdx_core/app/views/encounters/show.html.haml
+++ b/cdx_core/app/views/encounters/show.html.haml
@@ -12,6 +12,7 @@
   context: @navigation_context,
   testBatch: TestBatches::Presenter.for_encounter(@encounter.test_batch),
   submitSamplesUrl: update_samples_test_batch_patient_results_path(@encounter.test_batch),
+  submitPaymentUrl: set_as_paid_encounter_test_batch_path(@encounter),
   authenticityToken: form_authenticity_token,
   requested_by: @encounter.user !=nil ? @encounter.user.email : '',
   canUpdate: has_access?(@encounter, Policy::Actions::UPDATE_ENCOUNTER),
