Change patient result controllers.

--- a/cdx_core/app/views/encounters/show.html.haml
+++ b/cdx_core/app/views/encounters/show.html.haml
@@ -21,4 +21,4 @@
   showCancel: @show_cancel_encounter,
   referer: @return_path_encounter,
   statusTypes: RequestedTest.statuses,
-  showDstWarning: @encounter.requested_tests.show_dst_warning)
+  showDstWarning: @encounter.test_batch.show_dst_warning)
