--- a/cdx_core/app/views/microscopy_results/show.haml
+++ b/cdx_core/app/views/microscopy_results/show.haml
@@ -3,7 +3,7 @@
     .row.labelHeader
       .col-6
         %h3
-          = I18n.t('microscopy_results.show.header', patient_name: patient_display_name(@requested_test.encounter.patient.name))
+          = I18n.t('microscopy_results.show.header', patient_name: patient_display_name(@test_batch.encounter.patient.name))
       .col-6
         %ul
           %li
