--- a/cdx_core/app/views/shared/_header_nav.haml
+++ b/cdx_core/app/views/shared/_header_nav.haml
@@ -31,8 +31,9 @@
             = link_to I18n.t('layout.header_nav.test_results'), test_results_path
 
         -# ------------ APPROVALS
-        %li{:class => is_menu_item_active?('approvals', request.params) }
-          = link_to(I18n.t('layout.header_nav.approvals'), approvals_path)
+        - if has_access?(Encounter, Policy::Actions::APPROVE_ENCOUNTER)
+          %li{:class => is_menu_item_active?('approvals', request.params) }
+            = link_to(I18n.t('layout.header_nav.approvals'), approvals_path)
 
         -# ------------ DEVICES
         - if has_access_to_devices_index?
