--- a/cdx_core/app/views/encounters/show.html.haml
+++ b/cdx_core/app/views/encounters/show.html.haml
@@ -10,10 +10,9 @@
 = react_component('EncounterShow',
   encounter: @encounter_as_json,
   context: @navigation_context,
-  testBatch: TestBatches::Presenter.for_encounter(@encounter.test_batch),
+  testBatch: TestBatches::Presenter.for_encounter(@encounter.test_batch, current_user),
   submitSamplesUrl: update_samples_test_batch_patient_results_path(@encounter.test_batch),
   submitPaymentUrl: set_as_paid_encounter_test_batch_path(@encounter),
   rejectReasons: FeedbackMessages::Presenter.reject_reasons(@encounter.institution),
   updateResultUrl: test_batch_patient_results_path(@encounter.test_batch),
-  authenticityToken: form_authenticity_token,
-  showDstWarning: @encounter.test_batch.show_dst_warning)
+  authenticityToken: form_authenticity_token)
