Display translated message on patient logs.

--- a/cdx_core/app/views/patient_logs/show.haml
+++ b/cdx_core/app/views/patient_logs/show.haml
@@ -28,7 +28,7 @@
               .col-12
                 %label
                   = AuditLog.human_attribute_name(:title)
-                = @patient_log.title
+                = Audit::TextTranslator.localise(@patient_log.title)
             .row
               .col-12
                 %label
