--- a/cdx_core/app/views/culture_results/_form.haml
+++ b/cdx_core/app/views/culture_results/_form.haml
@@ -1,4 +1,4 @@
-= form_for([@test_batch, @culture_result], url: test_batch_culture_result_path(@test_batch, @culture_result), html: { autocomplete: 'off' }) do |f|
+= form_for([@encounter, @culture_result], url: encounter_culture_result_path(@encounter, @culture_result), html: { autocomplete: 'off' }) do |f|
   = validation_errors @culture_result
   .row
     .col.pe-2
@@ -55,4 +55,4 @@
   .row.button-actions
     .col
       = f.submit I18n.t('views.save'), class: 'btn-primary'
-      = link_to I18n.t('views.cancel'), encounter_path(@test_batch.encounter), class: 'btn-link'
+      = link_to I18n.t('views.cancel'), encounter_path(@encounter), class: 'btn-link'
