--- a/cdx_core/app/views/xpert_results/show.haml
+++ b/cdx_core/app/views/xpert_results/show.haml
@@ -14,6 +14,12 @@
         .row
           .col-6
             %label
+              = XpertResult.human_attribute_name(:result_status)
+          .col-6
+            = I18n.t("select.patient_result.status_options.#{@xpert_result.result_status}")
+        .row
+          .col-6
+            %label
               = XpertResult.human_attribute_name(:sample_collected_on)
           .col-6
             = I18n.l(@xpert_result.sample_collected_on, format: :full_date)
@@ -48,3 +54,9 @@
               = XpertResult.human_attribute_name(:result_on)
           .col-6
             = I18n.l(@xpert_result.result_on, format: :full_date)
+        .row
+          .col-6
+            %label
+              = XpertResult.human_attribute_name(:comment)
+          .col-6
+            = simple_format(@xpert_result.comment)
