Add filter by batch id.

--- a/cdx_core/app/views/test_orders/index.haml
+++ b/cdx_core/app/views/test_orders/index.haml
@@ -34,7 +34,7 @@
           .filter
             %label.block
               = I18n.t('test_orders.filters.test_order_id')
-            %input{type: "text", name: "encounter_id", value: params["encounter_id"]}
+            %input{type: "text", name: "batch_id", value: params["batch_id"]}
 
 
 .row.paginationHeader
