Fixed External Patient ID and other Patient Page bits

--- a/cdx_core/app/views/addresses/_country_select_form.haml
+++ b/cdx_core/app/views/addresses/_country_select_form.haml
@@ -1,1 +1,1 @@
-= country_select( 'address_form', 'country', class: 'input-large' )
+= address_form.country_select( 'country', class: 'input-large' )
