--- a/cdx_vietnam/app/views/addresses/_country_select_form.haml
+++ b/cdx_vietnam/app/views/addresses/_country_select_form.haml
@@ -1,1 +1,1 @@
-= country_select( 'address_form', 'country', priority_countries: ['VN','KH','CN','LA','TH'], class: 'input-large' )
+= address_form.country_select( 'country', priority_countries: ['VN','KH','CN','LA','TH'], class: 'input-large' )
