--- a/cdx_core/app/views/dst_lpa_results/_form.haml
+++ b/cdx_core/app/views/dst_lpa_results/_form.haml
@@ -91,6 +91,11 @@
       = f.label :result_on
     .col
       = f.date_field :result_on
+  .row
+    .col.pe-2
+      = f.label :comment
+    .col
+      = f.text_area :comment, rows: 4, cols: 70
 
   .row.button-actions
     .col
