--- a/cdx_core/app/views/episodes/_form.haml
+++ b/cdx_core/app/views/episodes/_form.haml
@@ -4,40 +4,59 @@
   :javascript
     $(document).ready( function()
     {
+      var require_prev_value = false;
       $('.panel-tab').hide();
       // is_new_entry is added in the new or edit files
       if(is_new_entry)
-      { 
+      {
         $('#episode_previous_history').hide();
-        $('.questions').hide(); 
+        $('.questions').hide();
       }
-      else 
-      { 
-        $('#outcome').show(); 
+      else
+      {
+        $('#outcome').show();
       }
+
+      $('form').on('submit', function(event){
+        if(require_prev_value)
+        {
+          if($('#episode_previous_history').val() == '') // blank
+          {
+            // dont allow submit
+            event.preventDefault();
+            alert( I18n.t('episodes.form.episode_previous_history_required') );
+            return false;
+          }
+        }
+      });
+
       // Episode History manager
-      $('#episode_initial_history').on('change', function() 
+      $('#episode_initial_history').on('change', function()
       {
         $('.questions').show();
-        if(is_new_entry) 
-        { 
-          $('#outcome').hide(); 
+        if(is_new_entry)
+        {
+          $('#outcome').hide();
         }
         var myval = $(this).val();
-        if(myval != 'previous') 
-        { 
+        if(myval != 'previous')
+        {
+          require_prev_value = false;
           $('#episode_previous_history').hide();
-          $('#drugres').hide(); 
-          if(myval=='new') 
-            $('#episode_diagnosis').val('presumptive_tb'); 
+          $('#drugres').hide();
+          if(myval=='new')
+            $('#episode_diagnosis').val('presumptive_tb');
         }
         else
+        {
           $('#episode_previous_history').show();
+          require_prev_value = true;
+        }
       });
       // Tab Handler
       $('.panel-tab#episodetype_tb').show();  // default
       $('span#episodeType').text('TB');
-      $('#epitabs li').on('click', function() 
+      $('#epitabs li').on('click', function()
       {
         var type = $(this).attr('id').split('_')[1];  // get bit after the 'tab_' in the id
         $('#epitabs li').removeClass('active');
