--- a/cdx_vietnam/app/views/patients/_form.html.haml
+++ b/cdx_vietnam/app/views/patients/_form.html.haml
@@ -1,9 +1,10 @@
-%script
-  $(document).ready(function(){
-  $('#patient_name').on('blur', function(){
-  if($('#patient_nickname').val() == '')
-  { $('#patient_nickname').val( $('#patient_name').val() ); }
-  })
+:javascript
+  $(document).ready(function() {
+    $('#patient_name').on('blur', function() {
+      if($('#patient_nickname').val() == '') {
+        $('#patient_nickname').val( $('#patient_name').val() );
+      }
+    })
   });
 
 = form_for(@patient) do |f|
@@ -23,7 +24,7 @@
 
   = react_component 'PatientInputName', fieldValue: @patient.name, patientsSearchUrl: patient_search_index_path
 
-  - unless @patient.name.blank?
+  - unless @patient.id.nil?
     .row
       .col.pe-2
         %div.tooltip
@@ -31,7 +32,7 @@
           %div.tooltiptext_r
             = I18n.t('patients.form.entity_id_tooltip')
       .col
-        = @patient.entity_id
+        = @patient.display_patient_id
 
   .row.nickname
     .col.pe-2
@@ -97,11 +98,15 @@
 
     .col
       = f.text_field 'age', :class=>'input-large'
-      %script
+      :javascript
         $('#patient_age').on('blur', function(){
-        var currentyear = new Date().getFullYear();
-        var estimatedyear = currentyear - $(this).val();
-        $('#patient_birth_date_on_1i').val(estimatedyear);
+          var estage = $(this).val();
+          if('' != estage)
+          {
+            var cyear = new Date().getFullYear();
+            var tyear = cyear - estage;
+            $('#patient_birth_date_on_1i').val(tyear);
+          }
         });
 
   - count = 0
@@ -114,7 +119,7 @@
   - if count > 1
     :javascript
       $(document).ready( function() {
-        $('#copy_addr').on('click', function(event){
+        $('#copy_addr').on('click', function(event) {
           event.preventDefault();
           // copy address fields
           $('#patient_addresses_attributes_1_address').val(  $('#patient_addresses_attributes_0_address').val() );
