--- a/cdx_core/app/views/culture_results/_form.haml
+++ b/cdx_core/app/views/culture_results/_form.haml
@@ -12,9 +12,9 @@
       = f.collection_select :media_used, CultureResult.media_options, :first, :last
   .row
     .col.pe-2
-      = f.label :serial_number, I18n.t('culture_results.form.serial_number')
+      = f.label :sample_identifier_id
     .col
-      = f.text_field :serial_number
+      = f.select :sample_identifier_id, SampleIdentifiers::Presenter.available_samples(@encounter)
   .row
     .col.pe-2
       = f.label :test_result, I18n.t('culture_results.form.test_result')
