--- a/cdx_core/app/views/microscopy_results/_form.haml
+++ b/cdx_core/app/views/microscopy_results/_form.haml
@@ -13,9 +13,9 @@
         = f.text_field :specimen_type
     .row
       .col.pe-2
-        = f.label :serial_number
+        = f.label :sample_identifier_id
       .col
-        = f.text_field :serial_number
+        = f.select :sample_identifier_id, SampleIdentifiers::Presenter.available_samples(@encounter)
     .row
       .col.pe-2
         = f.label :appearance
